--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>J. Gabriel</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
-        div
+        <h1>J. Gabriel</h1>
+        <button id="bt-tema" onclick="tema"></button>
+        <img src="" alt="me">
+        
     </header>
+    <main>
+        <h1>Meus Projetos</h1>
+        <nav>
+            <img src="" alt="Projeto-Login">
+            <img src="" alt="Projeto-Social">
+            <img src="" alt="Projeto-Cordel">
+            <img src="" alt="Projeto-Android">
+        </nav>
+        <section>
+            <img src="" alt="HTML">
+            <img src="" alt="CSS">
+            <img src="" alt="JavaScript">
+        </section>
+        
+    </main>
+    <footer>
+        <p>create by <a href="https://www.joaogabrielsousa.netlify.app">J. Gabriel</a></p>
+    </footer>
+
+    <script src="linguagens/script.js"></script>
 </body>
 </html>
